--- a/router/router.yaml
+++ b/router/router.yaml
@@ -34,3 +34,12 @@ limits:
   max_depth: 5
   max_height: 10
   max_aliases: 3
+
+
+perview_persisted_queries:
+  enabled: true
+  safelist:
+    enabled: true
+    require_id: false
+apq:
+  enabled: false
